--- a/src/institute_interfaces/CMakeLists.txt
+++ b/src/institute_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(institute_mechanical)
+project(institute_interfaces)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -11,17 +11,13 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(institute_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
-add_executable(lisi_node src/lisi.cpp)
-ament_target_dependencies(lisi_node rclcpp std_msgs institute_interfaces)
-
-install(TARGETS
-  lisi_node
-  DESTINATION lib/${PROJECT_NAME}
-)
+#添加消息文件和依赖
+rosidl_generate_interfaces(${PROJECT_NAME}
+  #---msg---
+  "msg/Homework.msg"
+ )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
